@@ -1,6 +1,7 @@
 import React from "react";
 import { Profiles, ProfilesProps } from "./Profiles";
 import { twMerge } from "tailwind-merge";
+import { UserIcon } from "@heroicons/react/24/outline";
 
 const variantStyles = {
   default: "",
@@ -9,13 +10,22 @@ const variantStyles = {
 };
 
 export const ProfilePictureXs: React.FC<ProfilesProps> = ({
-  imageSrc = "/public/Ellipse2.svg",
   className,
+  imageSrc,
+  name,
+  surname,
 }) => {
   return (
     <Profiles
       className={twMerge(variantStyles.default, className)}
       imageSrc={imageSrc}
+      name={name}
+      surname={surname}
+      icon={
+        !imageSrc && !name && !surname ? (
+          <UserIcon className="w-4 h-4 text-gray-500" />
+        ) : undefined
+      }
       size="xs"
     />
   );
@@ -23,12 +33,21 @@ export const ProfilePictureXs: React.FC<ProfilesProps> = ({
 
 export const ProfilePictureSm: React.FC<ProfilesProps> = ({
   className,
-  imageSrc = "/public/Ellipse2.svg",
+  imageSrc,
+  name,
+  surname,
 }) => {
   return (
     <Profiles
       className={twMerge(variantStyles.default, className)}
       imageSrc={imageSrc}
+      name={name}
+      surname={surname}
+      icon={
+        !imageSrc && !name && !surname ? (
+          <UserIcon className="w-6 h-6 text-gray-500" />
+        ) : undefined
+      }
       size="sm"
     />
   );
@@ -37,11 +56,20 @@ export const ProfilePictureSm: React.FC<ProfilesProps> = ({
 export const ProfilePictureMd: React.FC<ProfilesProps> = ({
   className,
   imageSrc,
+  name,
+  surname,
 }) => {
   return (
     <Profiles
       className={twMerge(variantStyles.default, className)}
       imageSrc={imageSrc}
+      name={name}
+      surname={surname}
+      icon={
+        !imageSrc && !name && !surname ? (
+          <UserIcon className="w-7 h-7 text-gray-500" />
+        ) : undefined
+      }
       size="md"
     />
   );
@@ -50,11 +78,20 @@ export const ProfilePictureMd: React.FC<ProfilesProps> = ({
 export const ProfilePictureLg: React.FC<ProfilesProps> = ({
   className,
   imageSrc,
+  name,
+  surname,
 }) => {
   return (
     <Profiles
       className={twMerge(variantStyles.default, className)}
       imageSrc={imageSrc}
+      name={name}
+      surname={surname}
+      icon={
+        !imageSrc && !name && !surname ? (
+          <UserIcon className="w-8 h-8 text-gray-500" />
+        ) : undefined
+      }
       size="lg"
     />
   );
@@ -63,11 +100,16 @@ export const ProfilePictureLg: React.FC<ProfilesProps> = ({
 export const ProfilePictureXl: React.FC<ProfilesProps> = ({
   className,
   imageSrc,
+  name,
+  surname
 }) => {
   return (
     <Profiles
       className={twMerge(variantStyles.default, className)}
       imageSrc={imageSrc}
+      name={name}
+      surname={surname}
+      icon={!imageSrc && !name && !surname ? <UserIcon className="w-9 h-9 text-gray-500" /> : undefined}
       size="xl"
     />
   );
@@ -76,12 +118,17 @@ export const ProfilePictureXl: React.FC<ProfilesProps> = ({
 export const ProfilePictureXxl: React.FC<ProfilesProps> = ({
   className,
   imageSrc,
+  name,
+  surname
 }) => {
   return (
     <Profiles
       className={twMerge(variantStyles.default, className)}
       imageSrc={imageSrc}
-      size="xxl"
+      name={name}
+      surname={surname}
+      icon={!imageSrc && !name && !surname ? <UserIcon className="w-11 h-11 text-gray-500" /> : undefined}
+      size="xl"
     />
   );
 };
@@ -247,12 +294,21 @@ export const ProfilePictureXlOnline: React.FC<ProfilesProps> = ({
 export const ProfilePictureXxlOnline: React.FC<ProfilesProps> = ({
   className,
   imageSrc,
+  name,
+  surname,
 }) => {
   return (
     <Profiles
       border
       className={twMerge(variantStyles.online, className)}
       imageSrc={imageSrc}
+      name={name}
+      surname={surname}
+      icon={
+        !imageSrc && !name && !surname ? (
+          <UserIcon className="w-full h-full text-gray-500" />
+        ) : undefined
+      }
       onlineSize="onlineXxl"
       size="xxl"
       variant="online"
